try2pass/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEFAULT
    IN
    MULTI_COM
    ASSERT
    THIS
    NEW
    OP_LOGIC_NOT
    NULL
    FINAL
    CASE
    WITH
    S_LBRACKET
    SWITCH
    CONTINUE
    CATCH
    CLASS
    IS
    ENUM
    SUPER
    TRY
    FINALLY
    EXTENDS
    ERROR
    RETURN
    RETHROW
    BREAK
    S_RBRACKET
    SINGLE_COM
    THROW

Grammar

Rule 0     S' -> root
Rule 1     root -> import_main
Rule 2     import_main -> import_list main
Rule 3     import_list -> empty
Rule 4     import_list -> import_statement
Rule 5     import_list -> import_list import_statement
Rule 6     import_statement -> import_expression S_SEMI_COL
Rule 7     main -> VOID MAIN S_LPAREN S_RPAREN S_LCURLY_BRACE statement_list S_RCURLY_BRACE
Rule 8     statement_list -> empty
Rule 9     statement_list -> statement
Rule 10    statement_list -> statement_list statement
Rule 11    statement -> expression_statement
Rule 12    statement -> selection_statement
Rule 13    statement -> iteration_statement
Rule 14    expression_statement -> declaration_expression semicolon
Rule 15    expression_statement -> empty semicolon
Rule 16    expression_statement -> input_expression semicolon
Rule 17    expression_statement -> output_expression semicolon
Rule 18    import_expression -> IMPORT LIT_STRING
Rule 19    declaration_expression -> assignment_expression
Rule 20    declaration_expression -> type_specifier declaration_expression
Rule 21    declaration_expression -> CONST type_specifier declaration_expression
Rule 22    selection_statement -> IF conditional_expression block_statement_list
Rule 23    selection_statement -> selection_statement ELSE IF conditional_expression block_statement_list
Rule 24    selection_statement -> selection_statement ELSE block_statement_list
Rule 25    iteration_statement -> WHILE conditional_expression block_statement_list
Rule 26    iteration_statement -> DO block_statement_list WHILE conditional_expression
Rule 27    iteration_statement -> FOR S_LPAREN declaration_expression S_SEMI_COL logical_expression S_SEMI_COL ID OP_ARITH_INCREMENT S_RPAREN block_statement_list
Rule 28    iteration_statement -> FOR S_LPAREN declaration_expression logical_expression ID OP_ARITH_DECREMENT S_RPAREN block_statement_list
Rule 29    block_statement_list -> S_LCURLY_BRACE statement_list S_RCURLY_BRACE
Rule 30    conditional_expression -> S_LPAREN logical_expression S_RPAREN
Rule 31    assignment_expression -> variable_expression
Rule 32    assignment_expression -> assignment_expression OP_ASSIGN_SIMPLE logical_expression
Rule 33    assignment_expression -> assignment_expression OP_ASSIGN_MULT logical_expression
Rule 34    assignment_expression -> assignment_expression OP_ASSIGN_DIV logical_expression
Rule 35    assignment_expression -> assignment_expression OP_ASSIGN_ADD logical_expression
Rule 36    assignment_expression -> assignment_expression OP_ASSIGN_SUBTRACT logical_expression
Rule 37    assignment_expression -> assignment_expression OP_ASSIGN_SIMPLE input_expression
Rule 38    assignment_expression -> assignment_expression OP_ASSIGN_MULT input_expression
Rule 39    assignment_expression -> assignment_expression OP_ASSIGN_DIV input_expression
Rule 40    assignment_expression -> assignment_expression OP_ASSIGN_ADD input_expression
Rule 41    assignment_expression -> assignment_expression OP_ASSIGN_SUBTRACT input_expression
Rule 42    logical_expression -> equality_expression
Rule 43    logical_expression -> logical_expression logical_operators equality_expression
Rule 44    equality_expression -> relational_expression
Rule 45    equality_expression -> equality_expression equality_operators relational_expression
Rule 46    relational_expression -> math_expression
Rule 47    relational_expression -> relational_expression relational_operators math_expression
Rule 48    math_expression -> primary_expression
Rule 49    math_expression -> math_expression math_operators primary_expression
Rule 50    input_expression -> ID OP_DOT ID S_LPAREN S_RPAREN
Rule 51    output_expression -> ID conditional_expression
Rule 52    type_specifier -> INT
Rule 53    type_specifier -> BOOLEAN
Rule 54    type_specifier -> STRING
Rule 55    type_specifier -> DOUBLE
Rule 56    logical_operators -> OP_LOGIC_AND
Rule 57    logical_operators -> OP_LOGIC_OR
Rule 58    equality_operators -> OP_EQUALITY_EQUAL
Rule 59    equality_operators -> OP_EQUALITY_NOT_EQUAL
Rule 60    relational_operators -> OP_EQUALITY_LESSER_THAN
Rule 61    relational_operators -> OP_EQUALITY_GREATER_THAN
Rule 62    relational_operators -> OP_EQUALITY_LESSER_OR_EQUAL_THAN
Rule 63    relational_operators -> OP_EQUALITY_GREATER_OR_EQUAL_THAN
Rule 64    math_operators -> OP_ARITH_ADD
Rule 65    math_operators -> OP_ARITH_SUBTRACT
Rule 66    math_operators -> OP_ARITH_MULTIPLY
Rule 67    math_operators -> OP_ARITH_DIVIDE
Rule 68    math_operators -> OP_ARITH_INTEGER_DIVIDE
Rule 69    math_operators -> OP_ARITH_MODULE
Rule 70    math_operators -> OP_ARITH_INCREMENT
Rule 71    math_operators -> OP_ARITH_DECREMENT
Rule 72    primary_expression -> variable_expression
Rule 73    primary_expression -> boolean_expression
Rule 74    primary_expression -> LIT_INT
Rule 75    primary_expression -> LIT_REAL
Rule 76    primary_expression -> LIT_STRING
Rule 77    variable_expression -> ID
Rule 78    variable_expression -> CONST
Rule 79    boolean_expression -> TRUE
Rule 80    boolean_expression -> FALSE
Rule 81    semicolon -> S_SEMI_COL
Rule 82    empty -> <empty>

Terminals, with rules where they appear

ASSERT               : 
BOOLEAN              : 53
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
CONST                : 21 78
CONTINUE             : 
DEFAULT              : 
DO                   : 26
DOUBLE               : 55
ELSE                 : 23 24
ENUM                 : 
ERROR                : 
EXTENDS              : 
FALSE                : 80
FINAL                : 
FINALLY              : 
FOR                  : 27 28
ID                   : 27 28 50 50 51 77
IF                   : 22 23
IMPORT               : 18
IN                   : 
INT                  : 52
IS                   : 
LIT_INT              : 74
LIT_REAL             : 75
LIT_STRING           : 18 76
MAIN                 : 7
MULTI_COM            : 
NEW                  : 
NULL                 : 
OP_ARITH_ADD         : 64
OP_ARITH_DECREMENT   : 28 71
OP_ARITH_DIVIDE      : 67
OP_ARITH_INCREMENT   : 27 70
OP_ARITH_INTEGER_DIVIDE : 68
OP_ARITH_MODULE      : 69
OP_ARITH_MULTIPLY    : 66
OP_ARITH_SUBTRACT    : 65
OP_ASSIGN_ADD        : 35 40
OP_ASSIGN_DIV        : 34 39
OP_ASSIGN_MULT       : 33 38
OP_ASSIGN_SIMPLE     : 32 37
OP_ASSIGN_SUBTRACT   : 36 41
OP_DOT               : 50
OP_EQUALITY_EQUAL    : 58
OP_EQUALITY_GREATER_OR_EQUAL_THAN : 63
OP_EQUALITY_GREATER_THAN : 61
OP_EQUALITY_LESSER_OR_EQUAL_THAN : 62
OP_EQUALITY_LESSER_THAN : 60
OP_EQUALITY_NOT_EQUAL : 59
OP_LOGIC_AND         : 56
OP_LOGIC_NOT         : 
OP_LOGIC_OR          : 57
RETHROW              : 
RETURN               : 
SINGLE_COM           : 
STRING               : 54
SUPER                : 
SWITCH               : 
S_LBRACKET           : 
S_LCURLY_BRACE       : 7 29
S_LPAREN             : 7 27 28 30 50
S_RBRACKET           : 
S_RCURLY_BRACE       : 7 29
S_RPAREN             : 7 27 28 30 50
S_SEMI_COL           : 6 27 27 81
THIS                 : 
THROW                : 
TRUE                 : 79
TRY                  : 
VOID                 : 7
WHILE                : 25 26
WITH                 : 
error                : 

Nonterminals, with rules where they appear

assignment_expression : 19 32 33 34 35 36 37 38 39 40 41
block_statement_list : 22 23 24 25 26 27 28
boolean_expression   : 73
conditional_expression : 22 23 25 26 51
declaration_expression : 14 20 21 27 28
empty                : 3 8 15
equality_expression  : 42 43 45
equality_operators   : 45
expression_statement : 11
import_expression    : 6
import_list          : 2 5
import_main          : 1
import_statement     : 4 5
input_expression     : 16 37 38 39 40 41
iteration_statement  : 13
logical_expression   : 27 28 30 32 33 34 35 36 43
logical_operators    : 43
main                 : 2
math_expression      : 46 47 49
math_operators       : 49
output_expression    : 17
primary_expression   : 48 49
relational_expression : 44 45 47
relational_operators : 47
root                 : 0
selection_statement  : 12 23 24
semicolon            : 14 15 16 17
statement            : 9 10
statement_list       : 7 10 29
type_specifier       : 20 21
variable_expression  : 31 72

Parsing method: LALR

state 0

    (0) S' -> . root
    (1) root -> . import_main
    (2) import_main -> . import_list main
    (3) import_list -> . empty
    (4) import_list -> . import_statement
    (5) import_list -> . import_list import_statement
    (82) empty -> .
    (6) import_statement -> . import_expression S_SEMI_COL
    (18) import_expression -> . IMPORT LIT_STRING

  ! shift/reduce conflict for IMPORT resolved as shift
    VOID            reduce using rule 82 (empty -> .)
    IMPORT          shift and go to state 4

  ! IMPORT          [ reduce using rule 82 (empty -> .) ]

    import_statement               shift and go to state 1
    import_expression              shift and go to state 2
    import_main                    shift and go to state 3
    root                           shift and go to state 5
    import_list                    shift and go to state 6
    empty                          shift and go to state 7

state 1

    (4) import_list -> import_statement .

    VOID            reduce using rule 4 (import_list -> import_statement .)
    IMPORT          reduce using rule 4 (import_list -> import_statement .)


state 2

    (6) import_statement -> import_expression . S_SEMI_COL

    S_SEMI_COL      shift and go to state 8


state 3

    (1) root -> import_main .

    $end            reduce using rule 1 (root -> import_main .)


state 4

    (18) import_expression -> IMPORT . LIT_STRING

    LIT_STRING      shift and go to state 9


state 5

    (0) S' -> root .



state 6

    (2) import_main -> import_list . main
    (5) import_list -> import_list . import_statement
    (7) main -> . VOID MAIN S_LPAREN S_RPAREN S_LCURLY_BRACE statement_list S_RCURLY_BRACE
    (6) import_statement -> . import_expression S_SEMI_COL
    (18) import_expression -> . IMPORT LIT_STRING

    VOID            shift and go to state 12
    IMPORT          shift and go to state 4

    import_expression              shift and go to state 2
    main                           shift and go to state 10
    import_statement               shift and go to state 11

state 7

    (3) import_list -> empty .

    VOID            reduce using rule 3 (import_list -> empty .)
    IMPORT          reduce using rule 3 (import_list -> empty .)


state 8

    (6) import_statement -> import_expression S_SEMI_COL .

    VOID            reduce using rule 6 (import_statement -> import_expression S_SEMI_COL .)
    IMPORT          reduce using rule 6 (import_statement -> import_expression S_SEMI_COL .)


state 9

    (18) import_expression -> IMPORT LIT_STRING .

    S_SEMI_COL      reduce using rule 18 (import_expression -> IMPORT LIT_STRING .)


state 10

    (2) import_main -> import_list main .

    $end            reduce using rule 2 (import_main -> import_list main .)


state 11

    (5) import_list -> import_list import_statement .

    VOID            reduce using rule 5 (import_list -> import_list import_statement .)
    IMPORT          reduce using rule 5 (import_list -> import_list import_statement .)


state 12

    (7) main -> VOID . MAIN S_LPAREN S_RPAREN S_LCURLY_BRACE statement_list S_RCURLY_BRACE

    MAIN            shift and go to state 13


state 13

    (7) main -> VOID MAIN . S_LPAREN S_RPAREN S_LCURLY_BRACE statement_list S_RCURLY_BRACE

    S_LPAREN        shift and go to state 14


state 14

    (7) main -> VOID MAIN S_LPAREN . S_RPAREN S_LCURLY_BRACE statement_list S_RCURLY_BRACE

    S_RPAREN        shift and go to state 15


state 15

    (7) main -> VOID MAIN S_LPAREN S_RPAREN . S_LCURLY_BRACE statement_list S_RCURLY_BRACE

    S_LCURLY_BRACE  shift and go to state 16


state 16

    (7) main -> VOID MAIN S_LPAREN S_RPAREN S_LCURLY_BRACE . statement_list S_RCURLY_BRACE
    (8) statement_list -> . empty
    (9) statement_list -> . statement
    (10) statement_list -> . statement_list statement
    (82) empty -> .
    (11) statement -> . expression_statement
    (12) statement -> . selection_statement
    (13) statement -> . iteration_statement
    (14) expression_statement -> . declaration_expression semicolon
    (15) expression_statement -> . empty semicolon
    (16) expression_statement -> . input_expression semicolon
    (17) expression_statement -> . output_expression semicolon
    (22) selection_statement -> . IF conditional_expression block_statement_list
    (23) selection_statement -> . selection_statement ELSE IF conditional_expression block_statement_list
    (24) selection_statement -> . selection_statement ELSE block_statement_list
    (25) iteration_statement -> . WHILE conditional_expression block_statement_list
    (26) iteration_statement -> . DO block_statement_list WHILE conditional_expression
    (27) iteration_statement -> . FOR S_LPAREN declaration_expression S_SEMI_COL logical_expression S_SEMI_COL ID OP_ARITH_INCREMENT S_RPAREN block_statement_list
    (28) iteration_statement -> . FOR S_LPAREN declaration_expression logical_expression ID OP_ARITH_DECREMENT S_RPAREN block_statement_list
    (19) declaration_expression -> . assignment_expression
    (20) declaration_expression -> . type_specifier declaration_expression
    (21) declaration_expression -> . CONST type_specifier declaration_expression
    (50) input_expression -> . ID OP_DOT ID S_LPAREN S_RPAREN
    (51) output_expression -> . ID conditional_expression
    (31) assignment_expression -> . variable_expression
    (32) assignment_expression -> . assignment_expression OP_ASSIGN_SIMPLE logical_expression
    (33) assignment_expression -> . assignment_expression OP_ASSIGN_MULT logical_expression
    (34) assignment_expression -> . assignment_expression OP_ASSIGN_DIV logical_expression
    (35) assignment_expression -> . assignment_expression OP_ASSIGN_ADD logical_expression
    (36) assignment_expression -> . assignment_expression OP_ASSIGN_SUBTRACT logical_expression
    (37) assignment_expression -> . assignment_expression OP_ASSIGN_SIMPLE input_expression
    (38) assignment_expression -> . assignment_expression OP_ASSIGN_MULT input_expression
    (39) assignment_expression -> . assignment_expression OP_ASSIGN_DIV input_expression
    (40) assignment_expression -> . assignment_expression OP_ASSIGN_ADD input_expression
    (41) assignment_expression -> . assignment_expression OP_ASSIGN_SUBTRACT input_expression
    (52) type_specifier -> . INT
    (53) type_specifier -> . BOOLEAN
    (54) type_specifier -> . STRING
    (55) type_specifier -> . DOUBLE
    (77) variable_expression -> . ID
    (78) variable_expression -> . CONST

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
    S_SEMI_COL      reduce using rule 82 (empty -> .)
    S_RCURLY_BRACE  reduce using rule 82 (empty -> .)
    IF              shift and go to state 32
    WHILE           shift and go to state 20
    DO              shift and go to state 18
    FOR             shift and go to state 29
    CONST           shift and go to state 19
    ID              shift and go to state 31
    INT             shift and go to state 33
    BOOLEAN         shift and go to state 36
    STRING          shift and go to state 22
    DOUBLE          shift and go to state 34

  ! IF              [ reduce using rule 82 (empty -> .) ]
  ! WHILE           [ reduce using rule 82 (empty -> .) ]
  ! DO              [ reduce using rule 82 (empty -> .) ]
  ! FOR             [ reduce using rule 82 (empty -> .) ]
  ! CONST           [ reduce using rule 82 (empty -> .) ]
  ! ID              [ reduce using rule 82 (empty -> .) ]
  ! INT             [ reduce using rule 82 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 82 (empty -> .) ]
  ! STRING          [ reduce using rule 82 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 82 (empty -> .) ]

    expression_statement           shift and go to state 17
    variable_expression            shift and go to state 27
    declaration_expression         shift and go to state 30
    assignment_expression          shift and go to state 28
    selection_statement            shift and go to state 24
    input_expression               shift and go to state 35
    type_specifier                 shift and go to state 23
    statement                      shift and go to state 25
    statement_list                 shift and go to state 37
    iteration_statement            shift and go to state 21
    output_expression              shift and go to state 38
    empty                          shift and go to state 26

state 17

    (11) statement -> expression_statement .

    S_RCURLY_BRACE  reduce using rule 11 (statement -> expression_statement .)
    IF              reduce using rule 11 (statement -> expression_statement .)
    WHILE           reduce using rule 11 (statement -> expression_statement .)
    DO              reduce using rule 11 (statement -> expression_statement .)
    FOR             reduce using rule 11 (statement -> expression_statement .)
    CONST           reduce using rule 11 (statement -> expression_statement .)
    ID              reduce using rule 11 (statement -> expression_statement .)
    INT             reduce using rule 11 (statement -> expression_statement .)
    BOOLEAN         reduce using rule 11 (statement -> expression_statement .)
    STRING          reduce using rule 11 (statement -> expression_statement .)
    DOUBLE          reduce using rule 11 (statement -> expression_statement .)
    S_SEMI_COL      reduce using rule 11 (statement -> expression_statement .)


state 18

    (26) iteration_statement -> DO . block_statement_list WHILE conditional_expression
    (29) block_statement_list -> . S_LCURLY_BRACE statement_list S_RCURLY_BRACE

    S_LCURLY_BRACE  shift and go to state 39

    block_statement_list           shift and go to state 40

state 19

    (21) declaration_expression -> CONST . type_specifier declaration_expression
    (78) variable_expression -> CONST .
    (52) type_specifier -> . INT
    (53) type_specifier -> . BOOLEAN
    (54) type_specifier -> . STRING
    (55) type_specifier -> . DOUBLE

    OP_ASSIGN_SIMPLE reduce using rule 78 (variable_expression -> CONST .)
    OP_ASSIGN_MULT  reduce using rule 78 (variable_expression -> CONST .)
    OP_ASSIGN_DIV   reduce using rule 78 (variable_expression -> CONST .)
    OP_ASSIGN_ADD   reduce using rule 78 (variable_expression -> CONST .)
    OP_ASSIGN_SUBTRACT reduce using rule 78 (variable_expression -> CONST .)
    S_SEMI_COL      reduce using rule 78 (variable_expression -> CONST .)
    LIT_INT         reduce using rule 78 (variable_expression -> CONST .)
    LIT_REAL        reduce using rule 78 (variable_expression -> CONST .)
    LIT_STRING      reduce using rule 78 (variable_expression -> CONST .)
    ID              reduce using rule 78 (variable_expression -> CONST .)
    CONST           reduce using rule 78 (variable_expression -> CONST .)
    TRUE            reduce using rule 78 (variable_expression -> CONST .)
    FALSE           reduce using rule 78 (variable_expression -> CONST .)
    INT             shift and go to state 33
    BOOLEAN         shift and go to state 36
    STRING          shift and go to state 22
    DOUBLE          shift and go to state 34

    type_specifier                 shift and go to state 41

state 20

    (25) iteration_statement -> WHILE . conditional_expression block_statement_list
    (30) conditional_expression -> . S_LPAREN logical_expression S_RPAREN

    S_LPAREN        shift and go to state 43

    conditional_expression         shift and go to state 42

state 21

    (13) statement -> iteration_statement .

    S_RCURLY_BRACE  reduce using rule 13 (statement -> iteration_statement .)
    IF              reduce using rule 13 (statement -> iteration_statement .)
    WHILE           reduce using rule 13 (statement -> iteration_statement .)
    DO              reduce using rule 13 (statement -> iteration_statement .)
    FOR             reduce using rule 13 (statement -> iteration_statement .)
    CONST           reduce using rule 13 (statement -> iteration_statement .)
    ID              reduce using rule 13 (statement -> iteration_statement .)
    INT             reduce using rule 13 (statement -> iteration_statement .)
    BOOLEAN         reduce using rule 13 (statement -> iteration_statement .)
    STRING          reduce using rule 13 (statement -> iteration_statement .)
    DOUBLE          reduce using rule 13 (statement -> iteration_statement .)
    S_SEMI_COL      reduce using rule 13 (statement -> iteration_statement .)


state 22

    (54) type_specifier -> STRING .
